fix validator + bugs
